--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "GifTT",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "version": "1.0.0",
+  "author": "Ali Eren Sevinc",
+  "homepage": "https://github.com/alierensevinc",
   "private": true,
   "scripts": {
     "start": "ionic-app-scripts serve",
@@ -52,7 +52,7 @@
     "@ionic/app-scripts": "^3.2.4",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project",
+  "description": "An Ionic app which uses GiphyApi",
   "cordova": {
     "plugins": {
       "cordova-plugin-file-transfer": {},
